--- a/Lauren_Wong_TheMoon_Assignment.html
+++ b/Lauren_Wong_TheMoon_Assignment.html
@@ -5,7 +5,7 @@
 
 <!--   Lauren Wong
    September 14, 2018
-   The Moon PDF Assignment -->
+   The Moon PDF Assignment HTML ONLY-->
    
    
     <meta charset="UTF-8">
