--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--MOON PICTURE
   -->
    <figure>
-   <img src="./img/the-moon.jpg" alt="The Moon"/>
+   <img src="./img/the-moon1.edda3e72.png" alt="The Moon"/>
    <figcaption>The moon as seen from Ottawa.</figcaption></figure>    
    
    
